# solar-system

./: Cargo.toml  readme.md
data/: definitions.toml
src/: app.rs  camera.rs  main.rs  matrix.rs  model.rs  model_render_pass.rs  model_shader.wgsl  render_target.rs  run.rs  scene.rs  solar_object.rs  view_proj.rs
src/camera/: camera.rs  camera_control.rs  movement_control.rs  projection.rs
src/matrix/: model_mat.rs  view_proj_mat.rs
src/model/: sphere.rs  sprite.rs
src/solar_object/: render_solar_object.rs  solar_object.rs
src/texture/: texture.rs
