[package]
name = "solar-system"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
image = "0.25.6"
pollster = "0.4.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
wgpu = "25.0.0"
winit = "0.30.11"
